Ajuste de acessibilidade

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Contraste de cores</title>
@@ -27,7 +27,6 @@
     <div id="content" class="container">
       <div class="box-1">
         <article class="">
-
           <p> Mussum Ipsum, cacilds vidis litro abertis. Quem manda na minha terra sou Euzis! Atirei o pau no gatis, per gatis num morreus. Pra lá , depois divoltis porris, paradis. Viva Forevis aptent taciti sociosqu ad litora torquent</p>
 
           <p> Copo furadis é disculpa de bebadis, arcu quam euismod magna. Ta deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.” Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Quem num gosta di mé, boa gente num é.</p>
@@ -41,10 +40,7 @@
 
     </div>
     <footer>
-    <em>Contrate de cores - 2016</em>
+      <em>Contrate de cores - 2016</em>
     </footer>
-
-
-
   </body>
 </html>
