Troca de if para switch case

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-Artigo : Contrste de cores
+Artigo : Contraste de cores
 Autor : Orivelton Cesar - www.orivelton.com.br
 -->
 <!DOCTYPE html>
@@ -18,10 +18,10 @@ Autor : Orivelton Cesar - www.orivelton.com.br
             <li><a href="#" title="Ir para o Menu">Ir para o Menu</a></li>
             <li><a href="#" title="Ir para o Rodapé">Ir para o Rodapé</a></li>
 
-            <li><a href="#" onclick="contraste(this.id)" id="semContraste" title="Sem Contraste">Sem Contraste</a></li>
-            <li><a href="#" onclick="contraste(this.id)" id="contrasteBranco" title="Contraste Branco">Contraste Branco</a></li>
-            <li><a href="#" onclick="contraste(this.id)" id="contrastePreto" title="Contraste Preto">Contraste Preto</a></li>
-            <li><a href="#" onclick="contraste(this.id)" id="contrasteAzul" title="Contraste Azul">Contraste Azul</a></li>
+            <li><a href="#" onclick="contraste(0)" title="Sem Contraste">Sem Contraste</a></li>
+            <li><a href="#" onclick="contraste(1)" title="Contraste Branco">Contraste Branco</a></li>
+            <li><a href="#" onclick="contraste(2)" title="Contraste Preto">Contraste Preto</a></li>
+            <li><a href="#" onclick="contraste(3)" title="Contraste Azul">Contraste Azul</a></li>
           </ul>
         </nav>
       </div>
