--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Autor : Orivelton Cesar - www.orivelton.com.br
               <a href="#" title="Ir para o Menu">Ir para o Menu</a>
             </li>
             <li>
-              <a href="#" title="Ir para o Rodapé">Ir para o Rodapé</a>
+              <a href="#footer" title="Ir para o Rodapé">Ir para o Rodapé</a>
             </li>
             <li>
               <a href="#" data-contraste="0" title="Sem Contraste" class="contraste-active">Sem Contraste</a>
@@ -49,8 +49,10 @@ Autor : Orivelton Cesar - www.orivelton.com.br
     <div class="row row-banner">
       <div class="container">
         <h1>Hi my names is <span>Orivelton</span></h1>
-        <img src="img/avatar.png" alt="Avatar Orivelton">
+        <img src="img/avatar.png" alt="Avatar Orivelton" class="avatar">
+        <img src="img/avatar-preto.png" alt="" class="oculos">
       </div>
+
     </div>
     <div class="row row-content">
       <article class="container" id="content">
@@ -76,7 +78,7 @@ Autor : Orivelton Cesar - www.orivelton.com.br
         </div>
       </article>
     </div>
-    <footer>
+    <footer id="footer">
         Copyright (c) 2016 Copyright Holder All Rights Reserved.
     </footer>
 
