--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ Autor : Orivelton Cesar - www.orivelton.com.br
               <a href="#content" title="Ir para o Conteúdo">Ir para o Conteúdo</a>
             </li>
             <li>
-              <a href="#" title="Ir para o Menu">Ir para o Menu</a>
+              <a href="#" title="Ir para o Topo">Ir para o Topo</a>
             </li>
             <li>
               <a href="#footer" title="Ir para o Rodapé">Ir para o Rodapé</a>
             </li>
             <li>
-              <a href="#" data-contraste="0" title="Sem Contraste" class="contraste-active">Sem Contraste</a>
+              <a href="#" data-contraste="0" title="Sem Contraste">Sem Contraste</a>
             </li>
             <li>
               <a href="#" data-contraste="1" title="Contraste Branco">Contraste Branco</a>
@@ -52,36 +52,50 @@ Autor : Orivelton Cesar - www.orivelton.com.br
         <img src="img/avatar.png" alt="Avatar Orivelton" class="avatar">
         <img src="img/avatar-preto.png" alt="" class="oculos">
       </div>
-
     </div>
     <div class="row row-content">
       <article class="container" id="content">
         <div class="box">
           <h2>Html5</h2>
           <i>★★★★★</i>
-          <p>Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Si num tem leite então bota uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.</p>
+          <p>
+            Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga.
+            Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.
+            Si num tem leite então bota uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.
+            </p>
         </div>
         <div class="box">
           <h2>Css3</h2>
           <i>★★★★★</i>
-          <p>Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Si num tem leite então bota uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.</p>
+          <p>
+            Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga.
+            Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.
+            Si num tem leite então bota uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.
+            </p>
         </div>
         <div class="box">
           <h2>Javascript</h2>
           <i>★★★★</i>
-          <p>Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Si num tem leite então bota uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.</p>
+          <p>
+            Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga.
+            Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.
+            Si num tem leite então bota uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.
+            </p>
         </div>
         <div class="box">
           <h2>Typescript</h2>
           <i>★★★★</i>
-          <p>Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Si num tem leite então bota uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.</p>
+          <p>
+            Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga.
+            Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.
+            Si num tem leite então bota uma pinga aí cumpadi! Atirei o pau no gatis, per gatis num morreus.
+            </p>
         </div>
       </article>
     </div>
     <footer id="footer">
         Copyright (c) 2016 Copyright Holder All Rights Reserved.
     </footer>
-
     <script type="text/javascript" src="js/contraste.js"></script>
   </body>
 </html>
