--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 Artigo : Contraste de cores
-Autor : Orivelton Cesar - www.orivelton.com.br
+Autor : Orivelton Cesar - https://github.com/orivelton
 -->
 <!DOCTYPE html>
 <html lang="pt-BR">
@@ -94,7 +94,7 @@ Autor : Orivelton Cesar - www.orivelton.com.br
       </article>
     </div>
     <footer id="footer">
-        Copyright (c) 2016 Copyright Holder All Rights Reserved.
+        Copyright (c) 2020 Copyright Holder All Rights Reserved.
     </footer>
     <script type="text/javascript" src="js/contraste.js"></script>
   </body>
